--- a/docs/components/breadcrumb-item/documentation-site-navigation.html
+++ b/docs/components/breadcrumb-item/documentation-site-navigation.html
@@ -3,7 +3,7 @@
       <elvt-icon slot="prefix" icon="mdi:book-open-page-variant"></elvt-icon>
       Documentation
     </elvt-breadcrumb-item>
-    <elvt-breadcrumb-item href="/docs/components">Components</elvt-breadcrumb-item>
-    <elvt-breadcrumb-item href="/docs/components/forms">Forms</elvt-breadcrumb-item>
+    <elvt-breadcrumb-item href="../">Components</elvt-breadcrumb-item>
+    <elvt-breadcrumb-item href="../forms">Forms</elvt-breadcrumb-item>
     <elvt-breadcrumb-item current>Input Field</elvt-breadcrumb-item>
   </elvt-breadcrumb>
