--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1146,12 +1146,12 @@ main::before {
   left: 0;
   right: 0;
   height: 12rem; /* Fixed height for header area */
-  background: var(--ifm-color-emphasis-100);
+  background: var(--ifm-color-emphasis-200);
   z-index: -1;
 }
 
 [data-theme='dark'] main::before {
-  background: var(--elvt-primitives-color-gray-800, #3d4253);
+  background: var(--elvt-primitives-color-gray-900, #1f2937);
 }
 
 /* Remove ALL background fills from content area so header background shows through */
